--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,15 +1,16 @@
 <h1>New game</h1>
 
 
-<% @letters.each do |letter| %>
-
-  <%= letter %>
-
-<% end %>
+<ul>
+  <% @letters.each do |letter| %>
+  <li><%= letter %></li>
+  <% end %>
+<ul>
 
 <p>What is the longest word you can find?</p>
 <form action="/score" method="post">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+  <%= hidden_field_tag :letters, @letters %>
   <input type="text" name="word">
   <input type="submit">
 </form>
